Add styles for Home body in mystyle.css

--- a/mystyle.css
+++ b/mystyle.css
@@ -1,2 +1,11 @@
 html {
   scroll-behavior: smooth;
+}
+/*tfasil home--------------------------------------------------------------------------------*/
+.Home-body{
+    margin: 0;
+    font-family: 'Poppins', sans-serif;
+    background-color: #fdfdfd;
+    color: #131211;
+    /*hna tkhlas--------------------------------------------------------------------------------------*/
+}
