--- a/mystyle.css
+++ b/mystyle.css
@@ -9,3 +9,84 @@ html {
     color: #131211;
     /*hna tkhlas--------------------------------------------------------------------------------------*/
 }
+header {
+    background-color: #d6d7dab2;
+    padding: 20px;
+    text-align:center;
+    box-shadow: 0 2px 5px rgba(12, 8, 37, 0.1);
+    
+}
+header nav a {
+  margin: 0 15px;
+  color: #2b2a2e;
+  text-decoration: none;
+  font-weight: bold;
+}
+footer {
+  background-color:#d6d7dab2;
+  text-align: center;
+  padding: 15px;
+  font-size:20px;
+  margin-top: 40px;
+  color: #2b2a2e;
+  font-family: 'DancingScript';}
+/*ta3 acceuil-----------------------------------------------------------------------------------------*/
+nav a {
+    margin: 0 30px;
+    text-decoration: none;
+    color:#4c4b50;
+    font-weight: bold;
+    font-family: 'PlayfairDisplay',cursive;
+
+}/*hna tkhlas-------------------------------------------------------------------------------------------*/
+/*bannnnnnnnnnnnner-----------------------------------------------------------------------------------------------*/
+.banner {
+    background-image: url('image/section1.jfif');
+    background-size:1100px; 
+    background-position: center;
+    background-repeat:repeat-x;
+    height:650px;
+    align-items: center;
+    justify-content: center;
+    color: rgb(2, 6, 39);
+    text-shadow: 1px 1px 2px #00000080;
+    padding: 40px;
+  }
+  .banner h1 {
+    font-size: 60px;
+    text-align: center;
+    margin-bottom:0.1px;
+    font-family: 'PlayfairDisplay',cursive;
+margin-top: 20px;
+}
+.banner p {
+    font-size:30px;
+    text-align: center;
+    font-family: 'DancingScript';
+   
+}
+/* tartib icon fi banner*/
+.social-icons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  margin-top:350px;
+}
+
+/* 7ajm icon*/
+.social-icons .icon img {
+  width: 28px;
+  height: 28px;
+  transition: transform 0.4s ease;
+  cursor: pointer;
+}
+
+.social-icons .icon img:hover {
+  transform: scale(1.2);
+}
+
+/*hna ykhlas-------------------------------------------------------------------------------------------------*/
+  
+   
+}
