--- a/mystyle.css
+++ b/mystyle.css
@@ -85,6 +85,128 @@ margin-top: 20px;
 .social-icons .icon img:hover {
   transform: scale(1.2);
 }
+/*aboutme--------------------------------------------------------------------------------------------------------------*/
+
+.Me {
+    background-color: #fafafa;
+    padding: 40px;
+    text-align: center;
+    animation: fadeIn 2s ease-in;
+  }
+  .Me h1{
+    font-size:50px;
+    margin-bottom:30px;
+    text-align: left;
+    color: #141a4e;
+    font-family: 'DancingScript';
+  }
+  .Me p{
+    font-size: 20px;
+    margin-bottom: 20px;
+    text-align:left;
+    color: rgb(1, 3, 8);
+    font-family: 'JosefinSans';
+
+  }
+ 
+    /*hna ykhlas---------------------------------------------------------------------------------------*/
+ /*win nbi3------------------------------------------------------------------------------*/
+/*body ta3 section 2*/
+ .assortment {
+  padding: 20px;
+  background-image: url('image/3.jfif');
+  background-size: cover;
+  
+}
+
+/* h2 ta3 section 2*/
+.assortment h2 {
+  text-align: center;
+  font-size: 50px;
+  margin-bottom: 30px;
+  color: #070642;
+  font-family: 'DancingScript';
+}
+
+/* 3anawin flavors*/
+.flavor {
+  font-size: 26px;
+  margin-top: 30px;
+  color: #07084d;
+  border-bottom: 2px solid #ccc;
+  padding-bottom: 10px;
+  font-family: 'PlayfairDisplay',cursive;
+}
+
+/* table of product*/
+.product {
+  width: 100%;
+  margin-top: 20px;
+  margin-bottom: 30px;
+  border-collapse: collapse;
+  font-family: 'JosefinSans';
+  color: #020141;
+}
+
+.product td {
+  padding: 10px;
+  vertical-align: top;
+  text-align: center;
+}
+
+/* hover*/
+.image-wrapper {
+  position: relative;
+  width: 150px;
+  height: 150px;
+  overflow: hidden;
+  margin: auto;
+}
+
+.image-wrapper img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: opacity 0.4s ease, transform 0.4s ease;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.image-wrapper .hover {
+  opacity: 0;
+}
+
+.image-wrapper:hover .default {
+  opacity: 0;
+  transform: scale(1.05);
+}
+
+.image-wrapper:hover .hover {
+  opacity: 1;
+  transform: scale(1.05);
+}
+
+/* order btn*/
+.order-btn-wrapper {
+  text-align: center;
+  margin: 20px 0 40px;
+}
+
+.order-button {
+  background-color: #030414;
+  color: white;
+  padding: 12px 30px;
+  font-size: 18px;
+  text-decoration: none;
+  border-radius: 8px;
+  transition: background-color 0.3s ease;
+}
+
+.order-button:hover {
+  background-color: #03182b;
+}
+/*hna ykhlas----------------------------------------------------------------------------------------------------------------------*/
 
 /*hna ykhlas-------------------------------------------------------------------------------------------------*/
   
